# plato-zotero-extension

./: Cargo.toml  README.md  gen_cargo_config.py
src/: main.rs  plato_events.rs
