[package]
name = "plato-zotero-extension"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
chrono = "0.4.19"
reqwest = { version = "0.11.13", features = ["blocking", "stream"] }
rustydav = "0.1.3"
serde = { version="1.0.144", features = ["derive"] }
serde_json = "1.0.85"
signal-hook = "0.3.13"
tokio = { version = "1.29.0", features = ["full"] }
toml = "0.5.9"
zip = "0.6.3"
zotero_api = { git = "https://github.com/Eonm/zotero" }
zotero_data = { git = "https://github.com/Eonm/zotero" }
